changed status to position fixed to handle vertical scrollbar on slides.

--- a/extensions/status/deck.status.css
+++ b/extensions/status/deck.status.css
@@ -1,5 +1,5 @@
 .deck-container .deck-status {
-  position: absolute;
+  position: fixed;
   bottom: 10px;
   right: 5px;
   color: #888;
